<resources>
    <string name="app_name">AEE Final Group Project</string>
    <string name="search_locations">Search locations</string>
    <string name="favorites_list">Favorites List</string>
    <string name="settings_and_login_menu">settings and login menu</string>
    <string name="filters">filters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="food">Food</string>
    <string name="study_spots">Study Spots</string>
    <string name="classrooms">Classrooms</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="back_to_home">Back to Home</string>
    <string name="favorites">Favorites</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="college_hall">College Hall</string>
    <string name="hemmingson">Hemmingson</string>
    <string name="notification_bell">Notification Bell</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account_picture">Account picture</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_in">Zoom in</string>
    <string name="location_name">Location Name</string>
    <string name="location_image">Location Image</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="rate_this_location">Rate this location:</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="who_left_this_pin">Who Left This Pin</string>
    <string name="classroom">Classroom</string>
    <string name="study_spot">Study Spot</string>
    <string name="what_is_this_place">What is this place?</string>
    <string name="delete">Delete</string>
    <string name="guest">Guest</string>
    <string name="_0">0</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="post">post</string>
    <string name="username">Username</string>
    <string name="_12_01_2024_10_00">12/01/2024 10:00</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="gu_interactive_map">GU Interactive Map</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="pin_style">Pin Style</string>
    <string name="comments">Comments:</string>
    <string name="select_image">Select Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="pin_title">Pin Title</string>
    <string name="view_details">View Details</string>
</resources>