<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <CheckBox
        android:id="@+id/check_filter_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food" />

    <CheckBox
        android:id="@+id/check_filter_study_spots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_spots" />

    <CheckBox
        android:id="@+id/check_filter_classrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classrooms" />
    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/clear" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="16dp">
        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>