<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_to_home"
            android:paddingEnd="7dp"
            android:paddingBottom="8dp"
            android:src="@drawable/back_arrow"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/locationNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/locationImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/location_image"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:paddingTop="8dp"/>

</LinearLayout>