<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/linear_layout_border">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:contentDescription="@string/settings_and_login_menu"
            android:src="@drawable/hamburger_menu" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Search locations"
            android:hint="@string/search_locations"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/filters_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:contentDescription="@string/filters"
            android:src="@drawable/filter_icon" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorites_list"
        android:src="@drawable/favorites_heart"/>


</RelativeLayout>
